# Invoisio

./: .gitattributes  .gitignore  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  clear  package-lock.json  package.json
app/: app.js  page.tsx  (+2 more)
legacy/invoice-escrow/: Cargo.toml  Makefile  README.md
legacy/invoice-escrow/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
soroban/contracts/invoice-payment/: .contract-id  Cargo.toml  Makefile  generate-schema.sh  schema.json
soroban/contracts/invoice-payment/examples/: multi_asset_demo.sh
soroban/contracts/invoice-payment/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
soroban/contracts/invoice-payment/test_snapshots/test/: test_allowlist_enforcement.1.json  test_allowlist_events_emitted.1.json  test_amount_above_max_returns_error.1.json  test_amount_at_max_succeeds.1.json  test_asset_code_exactly_12_chars_succeeds.1.json  test_asset_code_too_long_returns_error.1.json  test_asset_enum_serialization_deserialization.1.json  test_asset_validation_backward_compatibility.1.json  test_config_after_initialize_returns_high_level_snapshot.1.json  test_config_includes_paused_state.1.json  test_config_reflects_allowlist_mode_changes.1.json  test_cross_asset_duplicate_same_invoice_id_fails.1.json  test_duplicate_invoice_id_returns_error.1.json  test_duplicate_payment_fails_no_event_count_unchanged.1.json  test_empty_asset_code_returns_error.1.json  test_empty_invoice_id_returns_error.1.json  test_first_payment_succeeds_emits_event_and_increments_count.1.json  test_get_payment_reads_and_migrates_legacy_key.1.json  (+40 more)
(+523 files in other folders)
