[package]
name    = "invoice-escrow"
version = "0.1.0"
edition = "2021"
publish = false

description = "Soroban smart contract for invoice escrow with milestone payments on Stellar"
license     = "MIT"

[lib]
crate-type = ["lib", "cdylib"]
doctest    = false

[dependencies]
soroban-sdk = "25"

[dev-dependencies]
soroban-sdk = { version = "25", features = ["testutils"] }
